raffia/tests/error/less/mixin/call-commas.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ call-commas.less:1:13
  │
1 │ .mixin(@arg,,);
  │             ^


